crates/rusvelte_transformer/tests/snapshots/snapshot__client@simple-handler.svelte.snap
---
source: crates/rusvelte_transformer/tests/snapshot.rs
expression: code
input_file: crates/rusvelte_transformer/tests/samples/simple-handler.svelte
snapshot_kind: text
---
import "svelte/internal/disclose-version";
import * as $ from "svelte/internal/client";
export default function App($$anchor) {
	$.next();
}
